--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,15 +33,9 @@ h2 {
 nav  {
   float: right;
   width: 400px;
-  /* padding: 25px; */
-  /* border: 25px solid black; */
-  /* margin: 25px; */
-
-/* background-color: var(--light);  */
-  /* font-size: 20px; */
 }
 
-nav ul  {
+nav ul {
   list-style-type: none ;
 }
 nav ul li { 
@@ -52,28 +46,45 @@ nav ul li {
 a {
   color: var(--dark);
   text-decoration: none;
- } 
+ }
 
- #column {
-  float: left;
-  width: 33.33%;
-  padding: 15px;
+ .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+ }
+
+ #portfolio {
+   display:flex;
+   flex-wrap: wrap;
+   justify-content: center;
+ }
+
+ .column {
+  display: inline;
+  padding: 20px;
+  flex: 0 0 300px;
 }
-form, footer {
+.image1 {
+  width: 105%;
+}
+
+.image {
+  width: 100%;
+  height: 400px;  
+}
+h3, 
+h4, 
+footer, 
+#contact {
   text-align: center;
 }
 
- .contact { 
-  display: block;
-  padding: 1%;
-  /* background-color: aqua;  */
-  width: 200px;
-  height: 200px;
-  border: 2px solid var(--dark); 
+form {
+  align-content: center;
 }
-   @media screen and (max-width: 600px) {
-    .contact_box, input[type=submit] {
-    width: 100%;
-    margin-top: 10%;
-  }
-}    
+input, label, button {
+  display:block;
+  margin:0 auto;
+}
