--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ a {
   width: 50%;
  }
 
- #portfolio {
+ #portfolio, #more-portfolio {
    display:flex;
    flex-wrap: wrap;
    justify-content: center;
@@ -65,6 +65,7 @@ a {
   display: inline;
   padding: 20px;
   flex: 0 0 300px;
+ /* // max-width: 25%; */
 }
 .image1 {
   width: 105%;
@@ -73,6 +74,10 @@ a {
 .image {
   width: 100%;
   height: 400px;  
+}
+.image4, .image5, .image6 {
+  width: 100%;
+  height: 400px;   
 }
 h3, 
 h4, 
